--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,57 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+}
 
+a {
+  background-color: transparent;
+  text-decoration: none;
+  color: inherit;
+  padding: 0 20px;
+  opacity: 0.5;
+}
+
+nav {
+  max-width: 86rem;
+  margin: 0 auto;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: inherit;
+  color: inherit;
+  height: 150px;
+  line-height: 150px;
+}
+
+.left, .right {
+  margin: 0 50px;
+}
+
+.active {
+  opacity: 1; 
+}
+
+button {
+  font-weight: bold;
+  padding: 15px 25px;
+  border-radius: 10px;
+  border: none;
+  outline-width: 0;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.right > button:nth-child(6) {
+  margin-left: 10px;
+  background-color: #111;
+  color: #fff;
+}
+
+button:hover {
+  opacity: 0.6;
+  transition: 0.5s;
+}
