--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ nav {
   position: relative;
 }
 
+a:hover {
+  opacity: 1;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -58,7 +62,7 @@ button:hover {
   box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 4px 0px, rgba(0, 0, 0, 0.5) 0px 8px 16px 0px;
 }
 
-.features, .plans, .about {
+.features, .plans, .about, .help {
   display: inline-block;
   /* position: relative; */
 }
@@ -110,7 +114,7 @@ section>a, section>div>a {
   line-height: 2.5em;
 }
 
-.dropdown-container-small {
+.dropdown-container-small, .dropdown-container-about, .dropdown-container-help {
   display: none;
   position: absolute;
   width: 170px;
