--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ button:hover {
   height: 300px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 4px 0px, rgba(0, 0, 0, 0.09) 0px 8px 16px 0px;
   border-radius: 10px;
-  /* margin-right: 100px; */
+  margin-top: 20px;
   padding: 10px;
 }
 
@@ -121,4 +121,5 @@ section>a, section>div>a {
   box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 4px 0px, rgba(0, 0, 0, 0.09) 0px 8px 16px 0px;
   border-radius: 10px;
   padding: 10px;
+  margin-top: 20px;
 }
